Fix spacing and div sizes in desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ body {
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
     overflow-x: hidden;
+    justify-items: center;
 }
 
 .active,
@@ -108,6 +109,7 @@ section {
 
 /* Accessibility */
 .visually-hidden {
+    /* clip is depricated, but appears to still do the job, definitelly better than display: none */
     clip: rect(1px, 1px, 1px, 1px);
     clip-path: inset(50%);
     height: 1px;
@@ -157,8 +159,11 @@ header span {
     margin-left: 0.7rem;
 }
 
+/* unset color and shadow so it doesn't get affected by the general a:hover style */
 .logo a {
-    all: unset;
+    color: unset;
+    text-decoration: none;
+    text-shadow: unset;
 }
 
 .logo h1 {
@@ -323,6 +328,10 @@ header span {
     flex-direction: column;
 }
 
+#drinks-menu h3 {
+    margin-bottom: 0.5rem;
+}
+
 #drinks-menu h5 {
     font-size: 1rem;
 }
@@ -332,6 +341,7 @@ header span {
     font-weight: 400;
 }
 
+/* The accordion version of the cocktail menu has a fieldset as it uses radio buttons */
 #drinks-menu fieldset {
     border: none;
 }
@@ -354,10 +364,6 @@ header span {
 .cocktail-drinks {
     margin-top: 2rem;
     padding: 0;
-}
-
-.cocktail-drinks h3 {
-    margin-bottom: 0.5rem;
 }
 
 /* --table shows up in landscape; --accordion in mobile */
@@ -934,6 +940,7 @@ input[type="date"] {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin: 0 .5rem;
 }
 
 .feedback-form input[type=radio] {
@@ -2083,7 +2090,6 @@ iframe {
 
     .cocktail-drinks {
         grid-column: 2;
-        margin: 0;
         margin: 0 1rem;
     }
 
